--- a/log4j-jpa/pom.xml
+++ b/log4j-jpa/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.20.0</version>
+    <version>2.19.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
