--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j</artifactId>
   <packaging>pom</packaging>
-  <version>2.20.0</version>
+  <version>2.19.1-SNAPSHOT</version>
 
   <name>Apache Log4j 2</name>
   <description>Apache Log4j 2</description>
