Add basic `sortPom` configuration
The configuration only enforces whitspace and the order of the main
`<project>` elements. The order of dependencies and plugins is not
enforced.

--- a/pom.xml
+++ b/pom.xml
@@ -1545,6 +1545,11 @@
               <order>java,org,com,\#</order>
             </importOrder>
           </java>
+          <pom>
+            <sortPom>
+              <expandEmptyElements>false</expandEmptyElements>
+            </sortPom>
+          </pom>
         </configuration>
       </plugin>
 
