--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -165,10 +165,10 @@
         <executions>
           <execution>
             <id>add-source</id>
-            <phase>generate-sources</phase>
             <goals>
               <goal>add-source</goal>
             </goals>
+            <phase>generate-sources</phase>
             <configuration>
               <sources>
                 <source>${project.build.directory}/log4j-core-java9</source>
@@ -185,15 +185,13 @@
             <Bundle-SymbolicName>org.apache.logging.log4j.core</Bundle-SymbolicName>
             <!-- TODO: exclude internal classes from export -->
             <Export-Package>org.apache.logging.log4j.core.*</Export-Package>
-            <Import-Package>
-              javax.activation;version="[1.2,2)";resolution:=optional,
+            <Import-Package>javax.activation;version="[1.2,2)";resolution:=optional,
               javax.jms;version="[1.1,3)";resolution:=optional,
               javax.mail;version="[1.6,2)";resolution:=optional,
               javax.mail.internet;version="[1.6,2)";resolution:=optional,
               javax.mail.util;version="[1.6,2)";resolution:=optional,
               sun.reflect;resolution:=optional,
-              *
-            </Import-Package>
+              *</Import-Package>
             <Bundle-Activator>org.apache.logging.log4j.core.osgi.Activator</Bundle-Activator>
           </instructions>
         </configuration>
@@ -233,10 +231,10 @@
         <executions>
           <execution>
             <id>unpack-classes</id>
-            <phase>prepare-package</phase>
             <goals>
               <goal>unpack</goal>
             </goals>
+            <phase>prepare-package</phase>
             <configuration>
               <artifactItems>
                 <artifactItem>
