--- a/log4j-web/pom.xml
+++ b/log4j-web/pom.xml
@@ -16,12 +16,12 @@
   ~ limitations under the License.
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j</artifactId>
     <version>2.20.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
   <artifactId>log4j-web</artifactId>
   <packaging>jar</packaging>
@@ -91,11 +91,9 @@
           <instructions>
             <!-- we compile against 3.0, but require 2.5 minimum -->
             <Fragment-Host>org.apache.logging.log4j.core</Fragment-Host>
-            <Import-Package>
-	      javax.servlet;version="[2.5,5)",
+            <Import-Package>javax.servlet;version="[2.5,5)",
 	      javax.servlet.http;version="[2.5,5)",
-	      *
-	    </Import-Package>
+	      *</Import-Package>
             <Export-Package>org.apache.logging.log4j.web</Export-Package>
           </instructions>
         </configuration>
