--- a/log4j-core-its/pom.xml
+++ b/log4j-core-its/pom.xml
@@ -235,10 +235,8 @@
           <excludes>
             <exclude>**/ForceNoDefClassFoundError.*</exclude>
           </excludes>
-          <groups>
-            org.apache.logging.log4j.core.test.categories.PerformanceTests,
-            org.apache.logging.log4j.core.test.categories.Appenders$Jms
-          </groups>
+          <groups>org.apache.logging.log4j.core.test.categories.PerformanceTests,
+            org.apache.logging.log4j.core.test.categories.Appenders$Jms</groups>
         </configuration>
       </plugin>
       <plugin>
