--- a/log4j-cassandra/pom.xml
+++ b/log4j-cassandra/pom.xml
@@ -16,18 +16,16 @@
   ~ limitations under the License.
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
     <version>3.0.0-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
   <artifactId>log4j-cassandra</artifactId>
   <name>Apache Log4j Cassandra</name>
-  <description>
-    Cassandra appender for Log4j.
-  </description>
+  <description>Cassandra appender for Log4j.</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Cassandra Documentation</docLabel>
@@ -123,15 +121,13 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
           <!-- in Java 16+, https://openjdk.java.net/jeps/396 encapsulates internals CassandraRule accesses -->
-          <argLine>
-            --add-opens java.base/java.io=ALL-UNNAMED
+          <argLine>--add-opens java.base/java.io=ALL-UNNAMED
             --add-opens java.base/java.lang=ALL-UNNAMED
             --add-opens java.base/java.nio=ALL-UNNAMED
             --add-opens java.base/java.util=ALL-UNNAMED
             --add-opens java.base/java.util.concurrent=ALL-UNNAMED
             --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
-            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-          </argLine>
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
     </plugins>
