--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -137,15 +137,13 @@
             <Bundle-SymbolicName>org.apache.logging.log4j.core</Bundle-SymbolicName>
             <!-- TODO: exclude internal classes from export -->
             <Export-Package>org.apache.logging.log4j.core.*</Export-Package>
-            <Import-Package>
-              javax.activation;version="[1.2,2)";resolution:=optional,
+            <Import-Package>javax.activation;version="[1.2,2)";resolution:=optional,
               javax.jms;version="[1.1,3)";resolution:=optional,
               javax.mail;version="[1.6,2)";resolution:=optional,
               javax.mail.internet;version="[1.6,2)";resolution:=optional,
               javax.mail.util;version="[1.6,2)";resolution:=optional,
               sun.reflect;resolution:=optional,
-              *
-            </Import-Package>
+              *</Import-Package>
             <Bundle-Activator>org.apache.logging.log4j.core.osgi.Activator</Bundle-Activator>
           </instructions>
         </configuration>
