--- a/log4j-couchdb/pom.xml
+++ b/log4j-couchdb/pom.xml
@@ -16,18 +16,16 @@
   ~ limitations under the License.
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
     <version>3.0.0-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
   <artifactId>log4j-couchdb</artifactId>
   <name>Apache Log4j CouchDB</name>
-  <description>
-    CouchDB appender for Log4j.
-  </description>
+  <description>CouchDB appender for Log4j.</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>CouchDB Documentation</docLabel>
