--- a/log4j-layout-template-json-test/pom.xml
+++ b/log4j-layout-template-json-test/pom.xml
@@ -193,6 +193,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -201,9 +204,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -263,22 +263,6 @@
           <plugin>
             <groupId>io.fabric8</groupId>
             <artifactId>docker-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>start</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>start</goal>
-                </goals>
-              </execution>
-              <execution>
-                <id>stop</id>
-                <phase>post-integration-test</phase>
-                <goals>
-                  <goal>stop</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
               <verbose>all</verbose>
               <startParallel>true</startParallel>
@@ -292,7 +276,8 @@
                       <xpack.security.enabled>false</xpack.security.enabled>
                       <discovery.type>single-node</discovery.type>
                     </env>
-                    <memory>1000000000</memory> <!-- 1g -->
+                    <memory>1000000000</memory>
+                    <!-- 1g -->
                     <ports>
                       <port>9200:9200</port>
                     </ports>
@@ -337,9 +322,7 @@
                         <arg>--pipeline.batch.size</arg>
                         <arg>1</arg>
                         <arg>-e</arg>
-                        <arg>
-                          
-                          input {
+                        <arg>input {
                             gelf {
                               host =&gt; "logstash"
                               use_tcp =&gt; true
@@ -382,9 +365,7 @@
                               hosts =&gt; ["http://elasticsearch:9200"]
                               index =&gt; "log4j"
                             }
-                          }
-                          
-                        </arg>
+                          }</arg>
                       </exec>
                     </entrypoint>
                     <wait>
@@ -395,10 +376,32 @@
                 </image>
               </images>
             </configuration>
+            <executions>
+              <execution>
+                <id>start</id>
+                <goals>
+                  <goal>start</goal>
+                </goals>
+                <phase>pre-integration-test</phase>
+              </execution>
+              <execution>
+                <id>stop</id>
+                <goals>
+                  <goal>stop</goal>
+                </goals>
+                <phase>post-integration-test</phase>
+              </execution>
+            </executions>
           </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <skip>false</skip>
+              <includes>
+                <include>**/*IT.java</include>
+              </includes>
+            </configuration>
             <executions>
               <execution>
                 <goals>
@@ -407,12 +410,6 @@
                 </goals>
               </execution>
             </executions>
-            <configuration>
-              <skip>false</skip>
-              <includes>
-                <include>**/*IT.java</include>
-              </includes>
-            </configuration>
           </plugin>
         </plugins>
       </build>
