--- a/log4j-plugins/pom.xml
+++ b/log4j-plugins/pom.xml
@@ -59,12 +59,10 @@
             <Bundle-SymbolicName>org.apache.logging.log4j.plugins</Bundle-SymbolicName>
             <!-- TODO: exclude internal classes from export -->
             <Export-Package>org.apache.logging.log4j.plugins.*</Export-Package>
-            <Import-Package>
-              org.apache.logging.log4j,
+            <Import-Package>org.apache.logging.log4j,
               org.apache.logging.log4j.status,
               org.apache.logging.log4j.util,
-              org.osgi.framework.*
-            </Import-Package>
+              org.osgi.framework.*</Import-Package>
             <Bundle-Activator>org.apache.logging.log4j.plugins.osgi.Activator</Bundle-Activator>
           </instructions>
         </configuration>
