--- a/pom.xml
+++ b/pom.xml
@@ -28,21 +28,12 @@
 
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j</artifactId>
-  <packaging>pom</packaging>
   <version>3.0.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>Apache Log4j 2</name>
   <description>Apache Log4j 2</description>
   <url>https://logging.apache.org/log4j/2.x/</url>
-  <issueManagement>
-    <system>GitHub Issues</system>
-    <url>https://github.com/apache/logging-log4j2/issues</url>
-  </issueManagement>
-
-  <ciManagement>
-    <system>GitHub Actions</system>
-    <url>https://github.com/apache/logging-log4j2/actions</url>
-  </ciManagement>
 
   <inceptionYear>1999</inceptionYear>
 
@@ -219,12 +210,92 @@
 
   </mailingLists>
 
+  <!-- Modules in alphabetical order: -->
+  <modules>
+    <module>log4j-1.2-api</module>
+    <module>log4j-api</module>
+    <module>log4j-api-test</module>
+    <module>log4j-appserver</module>
+    <module>log4j-bom</module>
+    <module>log4j-cassandra</module>
+    <module>log4j-core</module>
+    <module>log4j-core-its</module>
+    <module>log4j-core-test</module>
+    <module>log4j-couchdb</module>
+    <module>log4j-csv</module>
+    <!-- `log4j-distribution` is excluded to speed up the build.
+         It is only needed while creating a release.
+         It is enabled by the `apache-release` profile defined below. -->
+    <module>log4j-docker</module>
+    <module>log4j-flume-ng</module>
+    <module>log4j-gctests</module>
+    <module>log4j-iostreams</module>
+    <module>log4j-jakarta-web</module>
+    <module>log4j-jcl</module>
+    <module>log4j-jdbc</module>
+    <module>log4j-jdbc-dbcp2</module>
+    <module>log4j-jeromq</module>
+    <module>log4j-jms</module>
+    <module>log4j-jmx-gui</module>
+    <module>log4j-jndi</module>
+    <module>log4j-jndi-test</module>
+    <module>log4j-jpa</module>
+    <module>log4j-jpl</module>
+    <module>log4j-jul</module>
+    <module>log4j-kafka</module>
+    <module>log4j-kubernetes</module>
+    <module>log4j-layout-jackson</module>
+    <module>log4j-layout-jackson-json</module>
+    <module>log4j-layout-jackson-xml</module>
+    <module>log4j-layout-jackson-yaml</module>
+    <module>log4j-layout-template-json</module>
+    <module>log4j-layout-template-json-test</module>
+    <module>log4j-liquibase</module>
+    <module>log4j-mongodb3</module>
+    <module>log4j-mongodb4</module>
+    <module>log4j-osgi</module>
+    <module>log4j-perf</module>
+    <module>log4j-plugin-processor</module>
+    <module>log4j-plugins</module>
+    <module>log4j-plugins-test</module>
+    <module>log4j-script</module>
+    <module>log4j-slf4j2-impl</module>
+    <module>log4j-slf4j-impl</module>
+    <module>log4j-smtp</module>
+    <module>log4j-spring-boot</module>
+    <module>log4j-spring-cloud-config</module>
+    <module>log4j-taglib</module>
+    <module>log4j-to-jul</module>
+    <module>log4j-to-slf4j</module>
+    <module>log4j-web</module>
+  </modules>
+
   <scm>
     <connection>scm:git:https://github.com/apache/logging-log4j2.git</connection>
     <developerConnection>scm:git:https://github.com/apache/logging-log4j2.git</developerConnection>
-    <url>https://github.com/apache/logging-log4j2</url>
     <tag>log4j-${log4jReleaseVersion}</tag>
+    <url>https://github.com/apache/logging-log4j2</url>
   </scm>
+  <issueManagement>
+    <system>GitHub Issues</system>
+    <url>https://github.com/apache/logging-log4j2/issues</url>
+  </issueManagement>
+
+  <ciManagement>
+    <system>GitHub Actions</system>
+    <url>https://github.com/apache/logging-log4j2/actions</url>
+  </ciManagement>
+
+  <distributionManagement>
+    <!-- `site` is only included to make `maven-site-plugin` stop complaining: -->
+    <site>
+      <id>www.example.com</id>
+      <url>scp://www.example.com/www/docs/project/</url>
+    </site>
+    <downloadUrl>https://logging.apache.org/log4j/2.x/download.html</downloadUrl>
+    <!-- `repository` from ASF parent POM (id: apache.releases.https) -->
+    <!-- `snapshotRepository` from ASF parent POM (id: apache.snapshots.https) -->
+  </distributionManagement>
 
   <properties>
 
@@ -1284,8 +1355,8 @@
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
           <version>${maven-bundle-plugin.version}</version>
-          <inherited>true</inherited>
           <extensions>true</extensions>
+          <inherited>true</inherited>
           <executions>
             <execution>
               <goals>
@@ -1471,10 +1542,10 @@
         </configuration>
         <executions>
           <execution>
-            <phase>verify</phase>
             <goals>
               <goal>check</goal>
             </goals>
+            <phase>verify</phase>
           </execution>
         </executions>
       </plugin>
@@ -1521,14 +1592,6 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>default-spotless</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
           <ratchetFrom>HEAD~31</ratchetFrom>
           <java>
@@ -1551,6 +1614,14 @@
             </sortPom>
           </pom>
         </configuration>
+        <executions>
+          <execution>
+            <id>default-spotless</id>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -1574,14 +1645,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
           <systemPropertyVariables>
             <java.awt.headless>true</java.awt.headless>
@@ -1591,6 +1654,14 @@
           <reuseForks>false</reuseForks>
           <encoding>UTF-8</encoding>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -1645,10 +1716,10 @@
         <executions>
           <execution>
             <id>define-currentYear-property</id>
-            <phase>pre-site</phase>
             <goals>
               <goal>timestamp-property</goal>
             </goals>
+            <phase>pre-site</phase>
             <configuration>
               <name>currentYear</name>
               <pattern>yyyy</pattern>
@@ -1661,27 +1732,26 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>generate-site-javadoc</id>
-            <phase>pre-site</phase>
-            <goals>
-              <goal>javadoc-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration combine.self="override">
           <!-- `notimestamp` avoids `diff` noise and is required for reproducible builds: https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
           <notimestamp>true</notimestamp>
           <skip>${javadoc.skip}</skip>
-          <bottom><![CDATA[
-            <p align="center">
+          <bottom><![CDATA[<p align="center">
               Copyright &copy; {inceptionYear}-{currentYear} {organizationName}.
               All Rights Reserved.<br/>
               Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, the Apache Logging project logo, and the Apache Log4j logo are trademarks of The Apache Software Foundation.
             </p>]]></bottom>
           <failOnError>false</failOnError>
         </configuration>
+        <executions>
+          <execution>
+            <id>generate-site-javadoc</id>
+            <goals>
+              <goal>javadoc-no-fork</goal>
+            </goals>
+            <phase>pre-site</phase>
+          </execution>
+        </executions>
       </plugin>
 
       <!-- Export AsciiDoc-formatted sources to `target/generated-sources/site/asciidoc/release-notes` -->
@@ -1708,12 +1778,12 @@
         <executions>
           <!-- Copy `src/site` to `target/generated-sources/site` -->
           <execution>
-            <inherited>false</inherited>
             <id>copy-site</id>
-            <phase>pre-site</phase>
             <goals>
               <goal>copy-resources</goal>
             </goals>
+            <phase>pre-site</phase>
+            <inherited>false</inherited>
             <configuration>
               <outputDirectory>${project.build.directory}/generated-sources/site</outputDirectory>
               <resources>
@@ -1730,10 +1800,10 @@
           <!-- Copy `target/site/apidocs` to the parent module's `target/site/javadoc/<artifactId>` folder -->
           <execution>
             <id>copy-javadoc</id>
-            <phase>site</phase>
             <goals>
               <goal>copy-resources</goal>
             </goals>
+            <phase>site</phase>
             <configuration>
               <skip>${javadoc.skip}</skip>
               <outputDirectory>${log4jParentDir}/target/site/javadoc/${project.artifactId}</outputDirectory>
@@ -1789,77 +1859,6 @@
 
   </build>
 
-  <distributionManagement>
-    <downloadUrl>https://logging.apache.org/log4j/2.x/download.html</downloadUrl>
-    <!-- `site` is only included to make `maven-site-plugin` stop complaining: -->
-    <site>
-      <id>www.example.com</id>
-      <url>scp://www.example.com/www/docs/project/</url>
-    </site>
-    <!-- `repository` from ASF parent POM (id: apache.releases.https) -->
-    <!-- `snapshotRepository` from ASF parent POM (id: apache.snapshots.https) -->
-  </distributionManagement>
-
-  <!-- Modules in alphabetical order: -->
-  <modules>
-    <module>log4j-1.2-api</module>
-    <module>log4j-api</module>
-    <module>log4j-api-test</module>
-    <module>log4j-appserver</module>
-    <module>log4j-bom</module>
-    <module>log4j-cassandra</module>
-    <module>log4j-core</module>
-    <module>log4j-core-its</module>
-    <module>log4j-core-test</module>
-    <module>log4j-couchdb</module>
-    <module>log4j-csv</module>
-    <!-- `log4j-distribution` is excluded to speed up the build.
-         It is only needed while creating a release.
-         It is enabled by the `apache-release` profile defined below. -->
-    <module>log4j-docker</module>
-    <module>log4j-flume-ng</module>
-    <module>log4j-gctests</module>
-    <module>log4j-iostreams</module>
-    <module>log4j-jakarta-web</module>
-    <module>log4j-jcl</module>
-    <module>log4j-jdbc</module>
-    <module>log4j-jdbc-dbcp2</module>
-    <module>log4j-jeromq</module>
-    <module>log4j-jms</module>
-    <module>log4j-jmx-gui</module>
-    <module>log4j-jndi</module>
-    <module>log4j-jndi-test</module>
-    <module>log4j-jpa</module>
-    <module>log4j-jpl</module>
-    <module>log4j-jul</module>
-    <module>log4j-kafka</module>
-    <module>log4j-kubernetes</module>
-    <module>log4j-layout-jackson</module>
-    <module>log4j-layout-jackson-json</module>
-    <module>log4j-layout-jackson-xml</module>
-    <module>log4j-layout-jackson-yaml</module>
-    <module>log4j-layout-template-json</module>
-    <module>log4j-layout-template-json-test</module>
-    <module>log4j-liquibase</module>
-    <module>log4j-mongodb3</module>
-    <module>log4j-mongodb4</module>
-    <module>log4j-osgi</module>
-    <module>log4j-perf</module>
-    <module>log4j-plugin-processor</module>
-    <module>log4j-plugins</module>
-    <module>log4j-plugins-test</module>
-    <module>log4j-script</module>
-    <module>log4j-slf4j2-impl</module>
-    <module>log4j-slf4j-impl</module>
-    <module>log4j-smtp</module>
-    <module>log4j-spring-boot</module>
-    <module>log4j-spring-cloud-config</module>
-    <module>log4j-taglib</module>
-    <module>log4j-to-jul</module>
-    <module>log4j-to-slf4j</module>
-    <module>log4j-web</module>
-  </modules>
-
   <profiles>
 
     <!-- Shortcut to populate `src/changelog/<releaseVersion>` from `src/changelog/.<releaseVersionMajor>.x.x` -->
@@ -1872,6 +1871,9 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-changelog-maven-plugin</artifactId>
             <inherited>false</inherited>
+            <configuration>
+              <releaseVersion>${log4jReleaseVersion}</releaseVersion>
+            </configuration>
             <executions>
               <execution>
                 <id>changelog-release</id>
@@ -1880,9 +1882,6 @@
                 </goals>
               </execution>
             </executions>
-            <configuration>
-              <releaseVersion>${log4jReleaseVersion}</releaseVersion>
-            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -1891,6 +1890,9 @@
     <!-- shortcut to enable `log4j-distribution` module creating the release distribution containing artifacts, sources, etc. -->
     <profile>
       <id>apache-release</id>
+      <modules>
+        <module>log4j-distribution</module>
+      </modules>
       <build>
         <plugins>
           <plugin>
@@ -1906,9 +1908,6 @@
           </plugin>
         </plugins>
       </build>
-      <modules>
-        <module>log4j-distribution</module>
-      </modules>
     </profile>
 
     <profile>
