Disable programmatic configuration if `log4j1.compatibility` is `false`
Closes #2778.

--- a/log4j-1.2-api/src/test/resources/PropertyConfiguratorTest/filter.properties
+++ b/log4j-1.2-api/src/test/resources/PropertyConfiguratorTest/filter.properties
@@ -31,4 +31,4 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%m%n
 log4j.logger.org.apache.log4j.PropertyConfiguratorTest=debug, ROLLING
 log4j.additivity.org.apache.log4j.rolling.FilterBasedRollingTest=false
-log4j.roolLogger=info, CONSOLE
+log4j.rootLogger=info, CONSOLE
